# robotframework_repo

./: .gitignore  README.md  log.html  output.xml  pyproject.toml  report.html  robot_agruments.txt
resources/pages/: fileUpload_page.resource  formAuthentication_page.resource  landing_page.resource
resources/utils/: browser_management.resource
results/: log.html  output.xml  playwright-log-1749343078840801300.txt  playwright-log-1749343092061850200.txt  playwright-log-1749343135449482600.txt  playwright-log-1749343357113329000.txt  playwright-log-1749562643556664800.txt  playwright-log.txt  report.html
tests/api/: getCommentsByPostId_test.robot.robot  postRequestCreatePost_test.robot
tests/ui/: dynamicContentSearch_test.robot  fileUpload_test.robot  formAuthentication_test.robot
